# Starforge

./: LICENSE  README.md  pyproject.toml
src/starforge/: __init__.py  analysis.py  cli.py  github_api.py  strategies.py
