 [project]
 name = "starforge"
 version = "0.1.0"
 description = "Data-driven strategy coach for growing your GitHub stars."
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "MIT" }
 keywords = ["github", "analytics", "cli", "developer-experience", "growth"]
dependencies = [
    "requests>=2.32.0",
    "rich>=13.7.0"
]

 [project.scripts]
 starforge = "starforge.cli:main"

 [project.optional-dependencies]
 dev = ["pytest", "ruff"]

 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools.packages.find]
 where = ["src"]

